tests/ui/pattern/rfc-3637-guard-patterns/name-resolution.stderr
error[E0408]: variable `y` is not bound in all patterns
  --> $DIR/name-resolution.rs:38:10
   |
LL |         ((Ok(x) if y) | (Err(y) if x),) => x && y,
   |          ^^^^^^^^^^^^        - variable not in all patterns
   |          |
   |          pattern doesn't bind `y`
   |
help: you might have meant to use the similarly named previously used binding `x`
   |
LL -         ((Ok(x) if y) | (Err(y) if x),) => x && y,
LL +         ((Ok(x) if y) | (Err(x) if x),) => x && y,
   |

error[E0408]: variable `x` is not bound in all patterns
  --> $DIR/name-resolution.rs:38:25
   |
LL |         ((Ok(x) if y) | (Err(y) if x),) => x && y,
   |              -          ^^^^^^^^^^^^^ pattern doesn't bind `x`
   |              |
   |              variable not in all patterns
   |
help: you might have meant to use the similarly named previously used binding `y`
   |
LL -         ((Ok(x) if y) | (Err(y) if x),) => x && y,
LL +         ((Ok(y) if y) | (Err(y) if x),) => x && y,
   |

error[E0408]: variable `x` is not bound in all patterns
  --> $DIR/name-resolution.rs:64:28
   |
LL |         Some(x if x > 0) | None => {}
   |              -             ^^^^ pattern doesn't bind `x`
   |              |
   |              variable not in all patterns

error[E0425]: cannot find value `x` in this scope
  --> $DIR/name-resolution.rs:11:34
   |
LL | fn bad_fn_item_1(x: bool, ((y if x) | y): bool) {}
   |                                  ^
   |
help: a local variable with a similar name exists
   |
LL - fn bad_fn_item_1(x: bool, ((y if x) | y): bool) {}
LL + fn bad_fn_item_1(x: bool, ((y if y) | y): bool) {}
   |

error[E0425]: cannot find value `y` in this scope
  --> $DIR/name-resolution.rs:13:25
   |
LL | fn bad_fn_item_2(((x if y) | x): bool, y: bool) {}
   |                         ^
   |
help: a local variable with a similar name exists
   |
LL - fn bad_fn_item_2(((x if y) | x): bool, y: bool) {}
LL + fn bad_fn_item_2(((x if x) | x): bool, y: bool) {}
   |

error[E0425]: cannot find value `x` in this scope
  --> $DIR/name-resolution.rs:21:18
   |
LL |         (x, y if x) => x && y,
   |                  ^
   |
help: a local variable with a similar name exists
   |
LL -         (x, y if x) => x && y,
LL +         (x, y if y) => x && y,
   |

error[E0425]: cannot find value `y` in this scope
  --> $DIR/name-resolution.rs:23:15
   |
LL |         (x if y, y) => x && y,
   |               ^
   |
help: a local variable with a similar name exists
   |
LL -         (x if y, y) => x && y,
LL +         (x if x, y) => x && y,
   |

error[E0425]: cannot find value `x` in this scope
  --> $DIR/name-resolution.rs:30:20
   |
LL |         (x @ (y if x),) => x && y,
   |                    ^
   |
help: a local variable with a similar name exists
   |
LL -         (x @ (y if x),) => x && y,
LL +         (x @ (y if y),) => x && y,
   |

error[E0425]: cannot find value `y` in this scope
  --> $DIR/name-resolution.rs:38:20
   |
LL |         ((Ok(x) if y) | (Err(y) if x),) => x && y,
   |                    ^
   |
help: a local variable with a similar name exists
   |
LL -         ((Ok(x) if y) | (Err(y) if x),) => x && y,
LL +         ((Ok(x) if x) | (Err(y) if x),) => x && y,
   |

error[E0425]: cannot find value `x` in this scope
  --> $DIR/name-resolution.rs:38:36
   |
LL |         ((Ok(x) if y) | (Err(y) if x),) => x && y,
   |                                    ^
   |
help: a local variable with a similar name exists
   |
LL -         ((Ok(x) if y) | (Err(y) if x),) => x && y,
LL +         ((Ok(x) if y) | (Err(y) if y),) => x && y,
   |

error[E0425]: cannot find value `nonexistent` in this scope
  --> $DIR/name-resolution.rs:45:15
   |
LL |     let (_ if nonexistent) = true;
   |               ^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `x` in this scope
  --> $DIR/name-resolution.rs:47:22
   |
LL |     if let ((x, y if x) | (x if y, y)) = (true, true) { x && y; }
   |                      ^
   |
help: a local variable with a similar name exists
   |
LL -     if let ((x, y if x) | (x if y, y)) = (true, true) { x && y; }
LL +     if let ((x, y if y) | (x if y, y)) = (true, true) { x && y; }
   |

error[E0425]: cannot find value `y` in this scope
  --> $DIR/name-resolution.rs:47:33
   |
LL |     if let ((x, y if x) | (x if y, y)) = (true, true) { x && y; }
   |                                 ^
   |
help: a local variable with a similar name exists
   |
LL -     if let ((x, y if x) | (x if y, y)) = (true, true) { x && y; }
LL +     if let ((x, y if x) | (x if x, y)) = (true, true) { x && y; }
   |

error[E0425]: cannot find value `x` in this scope
  --> $DIR/name-resolution.rs:50:25
   |
LL |     while let ((x, y if x) | (x if y, y)) = (true, true) { x && y; }
   |                         ^
   |
help: a local variable with a similar name exists
   |
LL -     while let ((x, y if x) | (x if y, y)) = (true, true) { x && y; }
LL +     while let ((x, y if y) | (x if y, y)) = (true, true) { x && y; }
   |

error[E0425]: cannot find value `y` in this scope
  --> $DIR/name-resolution.rs:50:36
   |
LL |     while let ((x, y if x) | (x if y, y)) = (true, true) { x && y; }
   |                                    ^
   |
help: a local variable with a similar name exists
   |
LL -     while let ((x, y if x) | (x if y, y)) = (true, true) { x && y; }
LL +     while let ((x, y if x) | (x if x, y)) = (true, true) { x && y; }
   |

error[E0425]: cannot find value `x` in this scope
  --> $DIR/name-resolution.rs:53:19
   |
LL |     for ((x, y if x) | (x if y, y)) in [(true, true)] { x && y; }
   |                   ^
   |
help: a local variable with a similar name exists
   |
LL -     for ((x, y if x) | (x if y, y)) in [(true, true)] { x && y; }
LL +     for ((x, y if y) | (x if y, y)) in [(true, true)] { x && y; }
   |

error[E0425]: cannot find value `y` in this scope
  --> $DIR/name-resolution.rs:53:30
   |
LL |     for ((x, y if x) | (x if y, y)) in [(true, true)] { x && y; }
   |                              ^
   |
help: a local variable with a similar name exists
   |
LL -     for ((x, y if x) | (x if y, y)) in [(true, true)] { x && y; }
LL +     for ((x, y if x) | (x if x, y)) in [(true, true)] { x && y; }
   |

error[E0425]: cannot find value `y` in this scope
  --> $DIR/name-resolution.rs:58:13
   |
LL |     (|(x if y), (y if x)| x && y)(true, true);
   |             ^
   |
help: a local variable with a similar name exists
   |
LL -     (|(x if y), (y if x)| x && y)(true, true);
LL +     (|(x if x), (y if x)| x && y)(true, true);
   |

error[E0425]: cannot find value `x` in this scope
  --> $DIR/name-resolution.rs:58:23
   |
LL |     (|(x if y), (y if x)| x && y)(true, true);
   |                       ^
   |
help: a local variable with a similar name exists
   |
LL -     (|(x if y), (y if x)| x && y)(true, true);
LL +     (|(x if y), (y if y)| x && y)(true, true);
   |

error[E0308]: mismatched types
  --> $DIR/name-resolution.rs:76:18
   |
LL |         local if local => 0,
   |                  ^^^^^ expected `bool`, found `({integer}, {integer})`
   |
   = note: expected type `bool`
             found tuple `({integer}, {integer})`

error[E0381]: used binding `x` is possibly-uninitialized
  --> $DIR/name-resolution.rs:8:49
   |
LL | fn good_fn_item(((x if x) | x): bool) -> bool { x }
   |                   -         -                   ^ `x` used here but it is possibly-uninitialized
   |                   |         |
   |                   |         binding initialized here in some conditions
   |                   binding declared here but left uninitialized

error: aborting due to 21 previous errors

Some errors have detailed explanations: E0308, E0381, E0408, E0425.
For more information about an error, try `rustc --explain E0308`.
